--- a/09 - Dev Tools Domination/index.html
+++ b/09 - Dev Tools Domination/index.html
@@ -9,38 +9,66 @@
   <p onClick="makeGreen()">×BREAK×DOWN×</p>
 
   <script>
-    const dogs = [{ name: 'Snickers', age: 2 }, { name: 'hugo', age: 8 }];
+  const dogs = [{ name: 'Snickers', age: 2 }, { name: 'Hugo', age: 8 }];
 
-    function makeGreen() {
-      const p = document.querySelector('p');
-      p.style.color = '#BADA55';
-      p.style.fontSize = '50px';
-    }
+function makeGreen() {
+  const p = document.querySelector('p');
+  p.style.color = '#BADA55';
+  p.style.fontSize = '50px';
+}
 
-    // Regular
+// Regular
+console.log('hello');
 
-    // Interpolated
+// Interpolated
+console.log('Hello I am a %s string!');
 
-    // Styled
+// Styled
+// console.log('%c I am some great text', 'font-size:50px; background: red;');
+// warning!
+console.warn('OH NOOO');
 
-    // warning!
+// Error :|
+console.error('OH NOOO');
 
-    // Error :|
+// Info
+console.info('Crocodiles eat 3-4 people per year');
 
-    // Info
+// Testing
+const p = document.querySelector('p');
+console.assert(p.classList.contains('ouch'), 'That is wrong!');
 
-    // Testing
+// clearing
+// console.clear();
 
-    // clearing
+// Viewing DOM Elements
+console.log(p);
+console.dir(p);
 
-    // Viewing DOM Elements
+// Grouping together
+dogs.forEach(dog => {
+  console.groupCollapsed(`${dog.name}`);
+  console.log(`This is ${dog.name}`);
+  console.log(`${dog.name} is ${dog.age * 7} dog years old`);
+  console.groupEnd(`${dog.name}`);
+});
 
-    // Grouping together
+// counting
+console.count('Wes');
+console.count('Wes');
+console.count('Wes');
+console.count('Wes');
 
-    // counting
+// timing
+console.time('fetching data');
+fetch('https://api.github.com/users/wesbos')
+  .then(data => data.json())
+  .then(data => {
+    console.timeEnd('fetching data');
+    console.log(data);
+  });
 
-    // timing
-
-  </script>
+console.table(dogs);
+</script>
 </body>
 </html>
