--- a/14 - JavaScript References VS Copying/index.html
+++ b/14 - JavaScript References VS Copying/index.html
@@ -7,46 +7,83 @@
 <body>
 
   <script>
-    // start with strings, numbers and booleans
+  // start with strings, numbers and booleans
+let age = 100;
+let age2 = age;
+console.log(age, age2);
+age = 200;
+console.log(age, age2);
 
-    // Let's say we have an array
-    const players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
+let name = 'Devin';
+let name2 = name;
+console.log(name, name2);
+name = 'Devo';
+console.log(name, name2);
+// Let's say we have an array
+const players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
 
-    // and we want to make a copy of it.
+// and we want to make a copy of it.
+const team = players;
 
-    // You might think we can just do something like this:
+console.log(players, team);
+// You might think we can just do something like this:
+// team[3] = 'Lux';
 
-    // however what happens when we update that array?
+// however what happens when we update that array?
 
-    // now here is the problem!
+// now here is the problem!
 
-    // oh no - we have edited the original array too!
+// oh no - we have edited the original array too!
 
-    // Why? It's because that is an array reference, not an array copy. They both point to the same array!
+// Why? It's because that is an array reference, not an array copy. They both point to the same array!
 
-    // So, how do we fix this? We take a copy instead!
+// So, how do we fix this? We take a copy instead!
+const team2 = players.slice();
+// one way
 
-    // one way
+// or create a new array and concat the old one in
+const team3 = [].concat(players);
 
-    // or create a new array and concat the old one in
+// or use the new ES6 Spread
+const team4 = [...players];
+team4[3] = 'heee hawww';
+console.log(team4);
 
-    // or use the new ES6 Spread
+const team5 = Array.from(players);
+// now when we update it, the original one isn't changed
 
-    // now when we update it, the original one isn't changed
+// The same thing goes for objects, let's say we have a person object
 
-    // The same thing goes for objects, let's say we have a person object
+// with Objects
+const person = {
+  name: 'Devin Chaves',
+  age: 80
+};
+// and think we make a copy:
+const captain = person;
+// captain.number = 99;
+// how do we take a copy instead?
+const cap2 = Object.assign({}, person, { number: 99 });
+// We will hopefully soon see the object ...spread
+const cap3 = { ...person };
+// Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
 
-    // with Objects
+const dev = {
+  name: 'Dev',
+  age: 100,
+  social: {
+    twitter: '@dchatrades',
+    instagram: 'locomocion'
+  }
+};
 
-    // and think we make a copy:
+console.log(dev);
 
-    // how do we take a copy instead?
+const devo = Object.assign({}, dev);
 
-    // We will hopefully soon see the object ...spread
-
-    // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
-
-  </script>
+// Poorman's deep clone
+const devo2 = JSON.parse(JSON.stringify(dev));
+</script>
 
 </body>
 </html>
